openmetadata-docs/content/v1.1.2/how-to-guides/quick-start-guide-for-admins/teams-and-users/invite-users.md
---
title: How to Invite Users to OpenMetadata
slug: /how-to-guides/quick-start-guide-for-admins/teams-and-users/invite-users
---

# How to Invite Users to OpenMetadata

Data is a team game and OpenMetadata is a platform to discover, collaborate and get your data right. Collaboration works best when all the team members have access to a standard tool. Admins can send invitations and invite users to onboard to OpenMetadata.

- Navigate to **Settings >> Users** and click on **Add Users**.

{% image
src="/images/v1.1.2/how-to-guides/teams-and-users/add-user1.png"
alt="Add User"
caption="Add User"
/%}

- Enter the details and click on **Create**.
  - Email, 
  - Display Name,
  - Description,
  - Teams - Users can be invited to multiple teams.
  - Roles - Multiple roles can be assigned to a user.
  - Admin - Use the toggle to provide Admin access.

{% note %}
**Note:** Users will inherit the Roles that apply to the Team they belong to. Additional roles can be explicitly assigned to a user.
{% /note %}

{% image
src="/images/v1.1.2/how-to-guides/teams-and-users/add-user2.png"
alt="Add User"
caption="Invite User"
/%}